--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Author URL: https://croptico.in/
             <div class="container">
                 <div class="row w3l-passion-mid-grids">
                     <div class="col-lg-6 w3hny-passion-item">
-                        <img src="assets/images/robot-handshake-human-background-futuristic-digital-age.jpg" alt="" class="img-fluid radius-image">
+                        <img src="assets/images/red.jpg" alt="" class="img-fluid radius-image">
                     </div>
                     <div class="col-lg-6 passion-grid-item-info ps-lg-5 mt-lg-0 mt-5">
                         
