--- a/services.html
+++ b/services.html
@@ -148,7 +148,7 @@ Author URL: https://croptico.in/
                     <div class="area-box ser-1">
                         <img src="" alt="" class="img-fluid radius-image">
                         <div class="area-box-info mt-2">
-                            <h4><a href="#feature" class="title-head">Solar Plant Erection</a></h4>
+                            <h4><a href="#feature" class="title-head">Solar Plant Erection</a></h4><br>
                             <p>Solar plant erection in industries like oil and gas involves the installation and setup of solar energy systems to harness clean and renewable power.Implementing
                                 solar plants offers environmental benefits, energy cost savings, and diversification of power sources in industries such as oil and gas.</p>
                         </div>
