--- a/services.html
+++ b/services.html
@@ -159,7 +159,7 @@ Author URL: https://croptico.in/
                         <img src="" alt="" class="img-fluid radius-image">
                         <div class="area-box-info mt-2">
                             <h4><a href="#feature" class="title-head">Fire and Gas System</a></h4>
-                            <p>Fire and Gas (F&G) systems are essential safety systems designed to detect and respond to fire and gas hazards in industrial environments .F&G systems play a critical role in safeguarding personnel, assets, and the environment by swiftly identifying and mitigating fire and gas risks.</p>
+                            <p>Fire and Gas (F&G) systems are essential safety systems designed to detect and respond to fire and gas hazards in industrial environments .F&G systems play a critical role in safeguarding personnel, assets, and the environment by swiftly identifying and mitigating risks</p>
                         </div>
                     </div>
                 </div>
