--- a/project.html
+++ b/project.html
@@ -131,7 +131,7 @@ Author URL: https://croptico.in/
                         <div class="area-box-info mt-2">
                             <h4><br><a href="#feature" class="title-head">GMMCO<br>
                             </a></h4>
-                           <br> <p>Fabrication and supply of 32 numbers of after cooler expansion tanks <br><br><b>ENd customer-Indian Navy</b><br><br><b>COUNTRY :India</b><br><br></p>
+                           <br> <p>Fabrication and supply of 32 numbers of after cooler expansion tanks <br><br><b>ENd customer-Indian Navy</b><br><br><b>COUNTRY :India</b><br></p>
                         </div>
                     </div>
                 </div>
