--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@ Author URL: https://croptico.in/
                                 <br><h3 class="mb-2">Give us a call</h3><br>
                                 <br><p><a href="tel:+91 6238 155 042">+91 6238 155 042</a></p>
                                 <BR><p><a href="tel:+91 9048 014 524">+91 9048 014 524</a></p>
-                                    <BR><p><a href="tel:+91 9444 036 751">+91 9444 036 751</a></p><BR> 
+                                    <BR><p><a href="tel:+91 9444 036 751">+91 9444 036 751</a></p>
                             </div>
                         </div>
                     </div>
@@ -115,7 +115,7 @@ Author URL: https://croptico.in/
                             <div class="icon-box"> <span class="fas fa-envelope-open-text"></span></div>
                             <div class="text-box">
                               <br><br><br>  <h3 class="mb-2">Email us</h3><br>
-                                <p> <a href="mailto:info@vapsa.in">info@vapsa.in</a><br><br><br><br><be><br></p>
+                                <p> <a href="mailto:info@vapsa.in">info@vapsa.in</a><br><br><br></p>
                             </div>
                         </div>
                     </div>
