--- a/project.html
+++ b/project.html
@@ -193,7 +193,7 @@ Author URL: https://croptico.in/
                                 <h4><a href="#feature" class="title-head">GMMCO</a></h4><br>
                                 <p>Manufacturing and supply of Mechanical equipments for automated radiator spray
                                     cleaning system for 1250 KVA CAT Gensets.</p> <p><BR><B>END USER:
-                                    Oil and Natural Gas Corporation Ltd <BR> COUNTRY: INDIA</B><br><br><br><br></p>
+                                    Oil and Natural Gas Corporation Ltd <BR> COUNTRY: INDIA</B><br><br><br></p>
                             </div>
                         </div>
                     </div>
@@ -216,7 +216,7 @@ Author URL: https://croptico.in/
                             <i class="fas fa-industry" aria-hidden="true"></i>
                             <div class="area-box-info">
                             <h4><a href="#feature" class="title-head">Multiple Customers</a></h4><br>
-                                <p>Design, Construction and comissioning of over 500 KW Solar Power Projects<br><br><br><br><br><br><br><br><br><br></p>
+                                <p>Design, Construction and comissioning of over 500 KW Solar Power Projects<br><br><br><br><br><br><br><br><br></p>
                                 
                             </div>
                         </div>
