--- a/project.html
+++ b/project.html
@@ -206,7 +206,7 @@ Author URL: https://croptico.in/
                                    commissioning of 1250 Kva CAT engines including electrical and mechanical
                                     systems, control cabling, PLC programming, and packing for dispatch</p> <BR><B>END
                                     USER:
-                                    Oil and Natural Gas Corporation Ltd <BR> COUNTRY: INDIA</B>
+                                    Oil and Natural Gas Corporation Ltd <BR> COUNTRY: INDIA<br></B>
                             </div>
                         </div>
                     </div>
