--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@ Author URL: https://croptico.in/
                             <div class="icon-box"> <span class="fas fa-envelope-open-text"></span></div>
                             <div class="text-box">
                               <br><br><br>  <h3 class="mb-2">Email us</h3><br>
-                                <p> <a href="mailto:info@vapsa.in">info@vapsa.in</a><br><br><br></p>
+                                <p> <a href="mailto:info@vapsa.in">info@vapsa.in</a><br><br><br><br></p>
                             </div>
                         </div>
                     </div>
