--- a/project.html
+++ b/project.html
@@ -90,7 +90,7 @@ Author URL: https://croptico.in/
                     <div class="col-lg-6 passion-grid-item-info ps-lg-5 mt-lg-0 mt-5">
 
                         <h3 class="title-w3l mb-4">OUR PROJECT SPECIALITIES</h3>
-                        <p class="mt-3 pe-lg-5">We specialize in
+                        <p class="mt-3 pe-lg-5" align="justify">We specialize in
                             executing turnkey EPC
                             (Engineering, Procurement, and Construction) projects and offer comprehensive Operation and Maintenance services across a wide range of industries, including Oil & Gas, Power, Cement,Glass, Pharma,Dairy,
                             Food processing, and Renewable Energy. With our comprehensive expertise, we ensure the successful completion of projects from conception to commissioning, meeting the highest industry standards.Our skilled personnel are equipped to handle the
