--- a/about.html
+++ b/about.html
@@ -15,6 +15,18 @@ Author URL: https://croptico.in/
         rel="stylesheet">
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
+      <style>
+        .img-fluid {
+    max-width: 80%; /* Ensure images don't exceed the container width */
+    height: auto; /* Maintain aspect ratio */
+    display: block; /* Remove any default inline spacing */
+}
+
+.radius-image {
+    border-radius: 5px; /* Add border-radius if you want rounded corners */
+}
+
+    </style>
 </head>
 
 <body>
@@ -90,10 +102,11 @@ Author URL: https://croptico.in/
                         </p><br><p align="justify">What sets us apart is our teams diverse expertise gained through extensive exposure to international clients and challenging projects. We believe in maintaining strong relationships with our customers and ensuring their utmost satisfaction. Our customer centric approach coupled with our commitment to excellence positions us as a reliable and trusted partner for all your engineering needs.</p>
 
                     </div>
-                    <div class="col-lg-6 w3hny-passion-item pe-lg-5">
-                        <img src="assets/images/vee.jpeg" alt="" class="img-fluid radius-image">
-    
-                    </div>
+                    <div class="col-lg-6 w3hny-passion-item pe-lg-4">
+                        <img src="assets/images/aboutjpeg.jpeg" alt="" class="img-fluid radius-image">
+                        <div style="margin-top: 10px;"> <!-- Adjust the margin-top value to set the space between the images -->
+                            <img src="assets/images/vee.jpeg" alt="" class="img-fluid radius-image">
+                        </div>
                     
                 </div>
             </div>
