--- a/project.html
+++ b/project.html
@@ -127,7 +127,7 @@ Author URL: https://croptico.in/
                 </div>
                 <div class="col-lg-4 col-md-6 grids-feature mt-5">
                     <div class="area-box ser-1">
-                        <img src="assets/images/g8.jpg" alt="" class="img-fluid radius-image">
+                        <img src="assets/images/IMG_2650.png" alt="" class="img-fluid radius-image">
                         <div class="area-box-info mt-2">
                             <h4><br><a href="#feature" class="title-head">GMMCO<br>
                             </a></h4>
