--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@ Author URL: https://croptico.in/
                 <img src="assets/images/DATA.jpg" alt="Partner One" class="img-fluid">
                <br><br> <p>Partner One</p>
               </div>
+                <div class="col-md-6 text-center">
+                <img src="https://www.autometersenergitec.co.in/asset/img/logo.png" alt="Partner One" class="img-fluid">
+               <br><br> <p>Partner One</p>
+              </div>
               <!-- Add more partner logos as needed -->
             </div>
           </div>
